--- a/app/Resources/views/posts/post_index.html.twig
+++ b/app/Resources/views/posts/post_index.html.twig
@@ -50,6 +50,7 @@
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
     <h3 class="w3-center">MY PHOTOS</h3>
     <p class="w3-center"><em><br> Click on the images to make them bigger</em></p><br>
+    <img  src="{{  post.path }}" alt="pic" width="100%" height="450" />
 </div>
     <!-- Third Parallax Image with Portfolio Text -->
     <div class="bgimg-3 w3-display-container w3-opacity-min">
