--- a/app/Resources/views/posts/post_new.html.twig
+++ b/app/Resources/views/posts/post_new.html.twig
@@ -48,6 +48,7 @@
             {{ form_row(form.content) }}
             {{ form_row(form.dataPosted) }}
             {{ form_row(form.image) }}
+            {{ form_row(form.path) }}
             {{ form_row(form.tags) }}
 
             <button class="w3-button w3-block w3-gray w3-section w3-padding" type="submit">Submit</button>
